# AutoCommit-GitGenius

./: LICENSE  README.MD
frontend/: index.html
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
