[package]
name = "auto_commit_app"
version = "0.2.0"
edition = "2025"

[dependencies]
tauri = { version = "2", features = ["dialog-all", "shell"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
git2 = "0.18"
reqwest = { version = "0.12", features = ["json"] }
